--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ h3 {
     /* padding: 1rem 0;  */
     position: fixed; 
     width: 100%; 
-    bottom: 0; 
+    /* bottom: 0;  */
     left: 0;
     z-index: var(--z-fixed); 
     box-shadow: 0 2px 10px rgba(0,0,0,0.05); 
