--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,9 +111,6 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
     width: 90%; 
     max-width: 1100px; 
     margin: auto; 
-    /* max-width: 768px; 
-    margin-left: var(--mb-1-5); 
-    margin-right: var(--mb-1-5); */
 }
 
 /* Navbar */
@@ -146,6 +143,11 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
         box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
         border-radius: 1.5rem 1.5rem 0 0;
         transition: .3s;
+    }
+    .container{
+        max-width: 767px; 
+        margin-left: var(--mb-1-5); 
+        margin-right: var(--mb-1-5);
     }
 }
 
