--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
     color: var(--first-color);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .nav__menu{
         position: fixed;
         bottom: -100%;
@@ -145,14 +145,14 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
         transition: .3s;
     }
     .container{
-        max-width: 767px; 
+        max-width: 768px; 
         margin-left: var(--mb-1-5); 
         margin-right: var(--mb-1-5);
     }
     .nav__toggle{
     color: var(--title-color);
     font-weight: var(--font-medium);
-    font-size: 1.5rem;
+    font-size: 3rem;
     cursor: pointer;
 }
 }
@@ -195,11 +195,31 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
 }
 
 
-
-/* #6c63ff */
-
 /* Sections */
-.section { padding: 100px 0; }
+
+/*==================== REUSABLE CSS CLASSES ====================*/
+.section {
+  padding: 2rem 0 4rem;
+}
+
+.section__title {
+  font-size: var(--h1-font-size);
+  color: var(--title-color);
+}
+
+.section__subtitle {
+  display: block;
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-3);
+}
+
+.section__title, 
+.section__subtitle {
+  text-align: center;
+}
+
+/* Home */
+
 .home { text-align: center; padding-top: 120px; }
 .home__img img { width: 200px; border-radius: 20%; margin-top: 20px; }
 .home__content{
