--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
 .home { text-align: center; padding-top: 120px; }
 .home__img img { width: 200px; border-radius: 20%; margin-top: 20px; }
 .home__content{
-    grid-template-columns: 5fr 3fr .5fr;
+    grid-template-columns: 0.5fr 3fr;
     padding-top: 3.5rem;
     align-items: center;
 }
