--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --hue-color: 250; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    --hue-color: 221; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -69,23 +69,17 @@
     }
 }
 
-
-h1 {
-  font-size: var(--h1-font-size);
-  font-family: var(--body-font); /* if you want Poppins from your variables */
-  font-weight: var(--font-semi-bold); /* optional */
-}
-
-h2 {
-  font-size: var(--h2-font-size);
-  font-family: var(--body-font);
+h1, h2, h3, h4 {
+  color: var(--title-color);
   font-weight: var(--font-semi-bold);
 }
 
-h3 {
-  font-size: var(--h3-font-size);
-  font-family: var(--body-font);
-  font-weight: var(--font-medium);
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
 
 .grid {
@@ -106,7 +100,13 @@ h3 {
 
 /* Reset */
 * { margin: 0; padding: 0; box-sizing: border-box; }
-body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; color: #333; }
+body { 
+    font-family: Arial, sans-serif; 
+    line-height: 1.6; 
+    background: #fdfdfd; 
+    /* background: url("../img/header_image.png") no-repeat center center/cover; */
+    color: #333; 
+}
 .container { 
     width: 90%; 
     max-width: 1100px; 
@@ -145,7 +145,7 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
         transition: .3s;
     }
     .container{
-        max-width: 95%; 
+        max-width: 90%; 
         margin-left: var(--mb-1-5); 
         margin-right: var(--mb-1-5);
     }
@@ -173,6 +173,7 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
     font-weight: var(--font-medium); 
     font-size: var(--small-font-size);
 }
+
 .nav__link:hover { color: var(--first-color); }  
 .nav__icon{
     font-size: 1.2rem;
@@ -220,7 +221,11 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
 
 /* Home */
 
-.home { text-align: center; padding-top: 120px; }
+.home { 
+    text-align: center; 
+    padding-top: 120px; 
+    /* background: url("../img/header_image.png") no-repeat center center/cover; */
+}
 .home__img img { width: 200px; border-radius: 20%; margin-top: 20px; }
 .home__content{
     grid-template-columns: 0.5fr 3fr;
@@ -238,7 +243,7 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
   align-items: center;
   gap: 0.5rem;
   text-decoration: none;
-  color: var(--title-color);
+  color: var(--first-color);
   font-size: 1.5rem;
 }
 .home__social-icon:hover { color: var(--first-color); }  
@@ -256,13 +261,66 @@ body { font-family: Arial, sans-serif; line-height: 1.6; background: #fdfdfd; co
     grid-column: 1/3;
 }
 
+.home__title{
+    font-size: var(--big-font-size);
+}
+
+.home__subtitle{
+    font-size: var(--h3-font-size);
+    color: var(--text-color);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-0-75);
+}
+.home__desciption{
+    margin-bottom: var(--mb-2);
+}
+
+/* .home__scroll { 
+    display: none;
+} */
+.home__scroll-button{
+    color: var(--first-color);
+    transition: .3s;
+}
+.home__scroll-button:hover{
+    transform: translateY(.25rem);
+}
+.home__scroll-mouse{
+    font-size: 2rem;
+}
+.home__scroll-name{
+    font-size: var(--normal-font-size);
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    margin-right: var(--mb-0-25);
+}
+.home__scroll-arrow{
+    font-size: 1.25rem;
+}
 
 .about__container { display: flex; gap: 2rem; align-items: center; }
 .about__container img { width: 250px; border-radius: 20px; }
 
 /* Buttons */
-.btn { display: inline-block; padding: 10px 20px; background: #6c63ff; color: #fff; border-radius: 5px; text-decoration: none; }
-.btn:hover { background: #5146d9; }
+.btn { 
+    display: inline-block; 
+    margin-top: 0.8rem;  /* space above each button */
+    padding: 10px 20px; 
+    background: var(--first-color); 
+    color: #fff; 
+    border-radius: 5px; 
+    text-decoration: none; 
+}
+.btn:hover { background: var(--first-color); }
+.btn__icon{
+    font-size: 1.25rem;
+    margin-left: var(--mb-0-5);
+    transition: .3s;
+}
+.button--flex{
+    display: inline-flex;
+    align-items: center;
+}
 
 /* Skills */
 .skills ul { list-style: none; }
