--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,11 +217,21 @@ body {
 
 #nav-toggle {
   display: inline;
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    font-size: 1.1rem;
   cursor: pointer;
+}
+
+#nav-toggle:hover{
+    color: var(--first-color);
 }
 
 #nav-close {
     display: none;
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    font-size: 1.1rem;
     cursor: pointer;
 }
 
