--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,7 +318,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .home__content {
-    grid-template-columns: max-content 1fr max-content; /* left, middle, right */
+    grid-template-columns: 0.5fr max-content max-content; /* left, middle, right */
     align-items: center; /* vertically center */
     column-gap: 2rem;
   }
@@ -326,10 +326,11 @@ body {
   .home__social {
   display: grid;
   flex-direction: column;
-  gap: 1rem;
+  gap: .5rem;
   justify-content: right;
   /* justify-self: start;  */
-  margin-left: 15rem;   /* 👈 push them slightly in */
+  margin-left: 0rem;   /* 👈 push them slightly in */
+  margin-bottom: 3rem;
 }
 
   .home__img {
@@ -347,15 +348,15 @@ body {
 
   /* .home__social {
     justify-self: start;
-  }
-
-  .home__data {
-    text-align: center; 
-  }
-
-  .home__img {
-    justify-self: end;
   } */
+
+  /* .home__data {
+    text-align: center; 
+  } */
+
+  /* .home__img {
+    justify-self: end;
+  }  */
 
   
 }
@@ -365,7 +366,7 @@ body {
   align-items: center;
   gap: 0.5rem;
   text-decoration: none;
-  color: var(--first-color);
+  color: var(--title-color);
   font-size: 1.5rem;
 }
 
@@ -395,9 +396,12 @@ body {
     margin-bottom: var(--mb-2);
 }
 
-/* .home__scroll { 
-    display: none;
-} */
+.home__scroll { 
+    /* display: none; */
+    margin-top: 0.5rem; /* increase the gap */
+}
+
+
 .home__scroll-button{
     color: var(--first-color);
     transition: .3s;
@@ -431,7 +435,8 @@ body {
     border-radius: 5px; 
     text-decoration: none; 
 }
-.btn:hover { background: var(--first-color); }
+.btn:hover { background: var(--first-color-alt); }
+
 .btn__icon{
     font-size: 1.25rem;
     margin-left: var(--mb-0-5);
