--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,8 @@
     --z-modal: 1000;
 }
 
+
+
 /* Font size for large devices */
 @media screen and (min-width: 968px) {
     :root {
@@ -67,6 +69,10 @@
         --small-font-size: .875rem;
         --smaller-font-size: .813rem;
     }
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 h1, h2, h3, h4 {
@@ -316,7 +322,11 @@ body {
 }
 
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 968px) {
+
+    .home {
+    height: 100vh; /* lock it to exactly one screen on desktops */
+  }
   .home__content {
     grid-template-columns: 0.5fr max-content max-content; /* left, middle, right */
     align-items: center; /* vertically center */
@@ -407,19 +417,19 @@ body {
     transition: .3s;
 }
 .home__scroll-button:hover{
-    transform: translateY(.25rem);
+    transform: translateY(.4rem);
 }
 .home__scroll-mouse{
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 .home__scroll-name{
-    font-size: var(--normal-font-size);
+    font-size: var(--h3-font-size);
     color: var(--title-color);
     font-weight: var(--font-medium);
     margin-right: var(--mb-0-25);
 }
 .home__scroll-arrow{
-    font-size: 1.25rem;
+    font-size: 1.5rem;
 }
 
 .about__container { display: flex; gap: 2rem; align-items: center; }
@@ -490,4 +500,4 @@ body {
 .contact__form input, .contact__form textarea { padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
 
 /* Footer */
-.footer { background: #6c63ff; color: #fff; text-align: center; padding: 20px; margin-top: 50px; }
+.footer { background: var(--first-color); color: #fff; text-align: center; padding: 20px; margin-top: 50px; }
