--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,9 +225,9 @@ body {
         bottom: 0; /* slide into view */
     }
 
-    /* .home__data{
-    grid-column: 1/3;
-} */
+    .home__data{
+    grid-column: 1/4;
+}
 
 }
 
