--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,7 @@ body {
     }
 
     .home__data{
-    grid-column: 1/4;
+    grid-column: 1/2;
 }
 
 }
@@ -347,6 +347,11 @@ body {
     justify-self: end;
     margin-right: 3rem;
   } 
+
+    .home__data{
+    grid-column: 3/4;
+}
+
 
     /* .home__data {
     text-align: left;
