--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,7 +364,7 @@ body {
     }
 
     .nav__menu.show-menu{
-        top: 0; /* slide into view */
+        bottom: 0; /* slide into view */
     }
 
     .home__data{
