--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,6 +338,10 @@ flex-direction: column;
     justify-self: end;
     margin-right: 3rem;
   } 
+
+  .home__data{
+    margin-right: auto;
+}
   
 }
 
