--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,7 @@ body {
     text-align: center; 
     padding-top: 120px; 
     height: 100vh; /* lock it to exactly one screen on desktops */
+    max-width: 100%;
 
     /* background: url("../img/header_image.png") no-repeat center center/cover; */
 }
@@ -306,8 +307,6 @@ flex-direction: column;
     align-items: center; /* vertically center */
     column-gap: 2rem;
     padding-top: 1rem;
-    max-width: 100%;
-
   }
 
 
@@ -341,6 +340,11 @@ flex-direction: column;
     margin-right: 3rem;
   } 
 
+/* 
+  .home__data{
+    margin-right: auto;
+    width: 100%;
+  } */
   
 }
 
