--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,20 @@ body {
     /* background: url("../img/header_image.png") no-repeat center center/cover; */
     color: #333; 
 }
+
+/* body {
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+} */
+
+/* div {
+    width: 100vw;
+    height: 100vh;
+} */
+
+
+
 /* .container { 
     width: 90%; 
     max-width: 1100px; 
@@ -301,7 +315,7 @@ flex-direction: column;
 } */
 
   .home__content {
-    grid-template-columns: 0.5fr max-content max-content; /* left, middle, right */
+    grid-template-columns: 0.5fr max-content 3fr; /* left, middle, right */
     align-items: center; /* vertically center */
     column-gap: 2rem;
     padding-top: 1rem;
@@ -337,13 +351,14 @@ flex-direction: column;
     justify-self: end;
     margin-right: 3rem;
   } 
-
-/* 
-  .home__data{
-    margin-right: auto;
+ 
+  /* .home__data{
+      grid-column: auto; 
+    /* margin-right: auto;
     width: 100%;
-  } */
-  
+    word-wrap: break-word;  
+  }  */
+   
 }
 
 @media screen and (max-width: 768px) {
