--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@
     --body-color: hsl(var(--hue-color), 60%, 99%);
     --container-color: #fff;
     --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+    --bakground-img: hsl(var(--hue-color), 30%, 85%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
 
     /*========== Font and typography ==========*/
@@ -405,7 +406,7 @@ body {
 
 .home__blob{
     width: 270px;
-    fill: var(--first-color-second);
+    fill: var(--bakground-img);
 }
 .home__blob-img{
     width: 215px;
@@ -490,13 +491,14 @@ body {
 .about__content { 
     text-align: justify;
     text-justify: inter-word; /* improves spacing between words */
-      hyphens: auto;
+    hyphens: auto;
     line-height: 1.6;         /* makes text more readable */
     font-size: var(--h3-font-size);
     display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1.5rem;
 }
+
 
 .about__container { 
     display: block; 
@@ -505,6 +507,12 @@ body {
     /* grid-template-columns: 1fr 1fr; */
     margin-top: 1.5rem;
 }
+
+/* .about__content-v2{
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5rem;
+
+} */
 
 
 .about__container img {
@@ -524,8 +532,8 @@ body {
 }
 
 .text-box {
-  background-color: var(--first-color);
-  color: #f0f0f0;
+  background-color: var(--container-color);
+  color: var(--text-color);
   padding: 2rem;
   border-radius: 1rem;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
@@ -533,12 +541,20 @@ body {
   margin: 0 auto;
 }
 
+.about_last_word{
+    margin-top: 0.5rem;
+    text-align: left;
+    font-weight:500;
+    color: rgb(0, 0, 0);
+}
 
 
 .about__end{
   margin: 0 auto;
   width: fit-content; /* or set a fixed width */
 }
+
+
 
 
 /* Skills */
