--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,15 +497,18 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1.5rem;
+    max-width: 1600px;
+    
 }
 
 
 .about__container { 
-    display: block; 
+    /* align-items: left; */
     gap: 2rem; 
-    align-items: center; 
+    align-items: center;
     /* grid-template-columns: 1fr 1fr; */
     margin-top: 1.5rem;
+    width: fit-content;
 }
 
 /* .about__content-v2{
@@ -593,9 +596,9 @@ body {
     padding: 0 1rem; 
     position: relative;
 
-    /* width: 100%;
-    max-width: 100%;
-    margin: 0px auto; */
+    /* width: 100%; */
+    /* max-width: 100%;
+    margin: 0px auto;  */
     /* width: 100%; 
     max-width: 800px; 
     margin: auto;  */
@@ -618,7 +621,7 @@ body {
 
 .portfolio__container .swiper-slide {
   width: 80%;         /* each slide takes 80% of the container width */
-  max-width: 450px;   /* optional limit */
+  max-width: 1200px;   /* optional limit */
   flex-shrink: 0;
 }
 
@@ -748,12 +751,15 @@ position: absolute;
 .publication__description{
     margin-top: 2rem;
     text-align: left;
+    font-weight: 500;
+    color: rgb(0, 0, 0);
 }
 
 .publication__authors{
     margin-top: 1rem;
     font-size: var(--small-font-size);
     color: var(--first-color);
+    font-weight: 400;
     text-align: left;
 }
 
@@ -766,12 +772,35 @@ position: absolute;
 
 
 
-/* .text-box.publication__data {
-    max-width: 90vw;
-    box-sizing: border-box;
-    margin-top: 2rem;
-    margin-bottom: 5rem;
-} */
+.text-box.publication__data.quantum {
+  background: 
+    linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), /* overlay for transparency */
+    url('../img/AI_article_background.jpg') no-repeat center/cover; /* image */
+}
+
+.text-box.publication__data.QC {
+  background: 
+    linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), /* overlay for transparency */
+    url('../img/QC_article_background.jpg') no-repeat center/cover; /* image */
+}
+
+.text-box.publication__data.HR {
+  background: 
+    linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), /* overlay for transparency */
+    url('../img/HR_article_background.jpg') no-repeat center/cover; /* image */
+}
+
+.text-box.publication__data.turb {
+  background: 
+    linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0.4)), /* overlay for transparency */
+    url('../img/atm_turb_article_background.jpg') no-repeat center/cover; /* image */
+}
+
+.text-box.publication__data.DSW {
+  background: 
+    linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), /* overlay for transparency */
+    url('../img/DSW_article_background.jpg') no-repeat center/cover; /* image */
+}
 
 
 .publications__container {
